cmake_minimum_required(VERSION 2.8.12)
project(RuntimeCommandEngine)

enable_testing()

#Allow folders in MSVC
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Runtime Command Engine")
set(CPACK_PACKAGE_VENDOR "Geoffrey Viola")
set(PACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "0")
set(CPACK_PACKAGE_FILE_NAME
"\
${PROJECT_NAME}-\
${CPACK_PACKAGE_VERSION_MAJOR}-${CPACK_PACKAGE_VERSION_MINOR}-\
${CPACK_PACKAGE_VERSION_PATCH}-${CMAKE_SYSTEM_NAME}-${CMAKE_CXX_COMPILER_ID}")
include (CPack)

add_subdirectory(Source)
